src/code-blocks/components/Tabs.css
.choice-tabs {
  -webkit-tap-highlight-color: transparent;

  /* tablist style logic */
  select:has(option:nth-of-type(1):checked) ~ ul[role='tablist'] li:nth-of-type(1),
  select:has(option:nth-of-type(2):checked) ~ ul[role='tablist'] li:nth-of-type(2),
  select:has(option:nth-of-type(3):checked) ~ ul[role='tablist'] li:nth-of-type(3),
  select:has(option:nth-of-type(4):checked) ~ ul[role='tablist'] li:nth-of-type(4),
  select:has(option:nth-of-type(5):checked) ~ ul[role='tablist'] li:nth-of-type(5),
  select:has(option:nth-of-type(6):checked) ~ ul[role='tablist'] li:nth-of-type(6),
  select:has(option:nth-of-type(7):checked) ~ ul[role='tablist'] li:nth-of-type(7) {
    border-bottom: 2px solid #aaa;
    color: var(--color-text);
    font-weight: 600;
  }
}

.choice-tabs__tab-list {
  border-bottom: 1px solid #eaeaea;
  margin: 0 0 10px;
  padding: 0;
}

.choice-tabs__tab {
  display: inline-block;
  bottom: -1px;
  position: relative;
  list-style: none;
  padding: 6px 12px;
  cursor: pointer;
  font-weight: 500;
  /* lighten --color-text by 20% */
  color: color-mix(in srgb, var(--color-text) 80%, white 20%);
}

.choice-tabs__tab-content {
  display: inline-flex;
  align-items: center;
  gap: 2px;
}

.choice-tabs__tab img {
  width: 14px;
  height: 14px;
}

@media screen and (max-width: 400px) {
  .choice-tabs__tab {
    padding: 6px 4px;
    font-size: 0.87em;
  }
}

.choice-tabs__tab:hover {
  color: var(--color-text);
}

.choice-tabs__tab--disabled {
  color: GrayText;
  cursor: default;
}

.choice-tabs__tab:focus {
  outline: none;
}

